force-app/main/default/objects/Account/fields/MultiSelect__c.field-meta.xml
<CustomField>
    <fullName>MultiSelect__c</fullName>
    <label>MultiSelect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
            <value>
                <fullName>Sixth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>