force-app/main/default/objects/Account/fields/No_of_OLIs__c.field-meta.xml
<CustomField>
    <fullName>No_of_OLIs__c</fullName>
    <label>No of OLIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>