force-app/main/default/objects/Account/fields/Total_Amount_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_on_Opportunity__c</fullName>
    <label>Total Amount on Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>