force-app/main/default/objects/Account/recordTypes/Record_Type_A.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_A</fullName>
    <active>true</active>
    <label>Record Type A</label>
</RecordType>