force-app/main/default/objects/Account/recordTypes/Record_Type_B.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_B</fullName>
    <active>true</active>
    <label>Record Type B</label>
</RecordType>