force-app/main/default/objects/Account/validationRules/AnnualRevenue_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualRevenue_Not_Empty</fullName>
    <active>false</active>
    <errorConditionFormula>OR (   ISBLANK(AnnualRevenue ) , AnnualRevenue &lt; 1000 )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue should be more than 1000</errorMessage>
</ValidationRule>