force-app/main/default/objects/Account/validationRules/CustomMetadata_Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomMetadata_Revenue_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
					 ISPICKVAL( Support_Tier__c , &quot;Gold&quot;),
	     AnnualRevenue &lt;  20 * $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c 
					)</errorConditionFormula>
    <errorMessage>Annual revenue is less than 20 times the minimum spending amount of the Gold support tier</errorMessage>
</ValidationRule>