force-app/main/default/objects/Account/validationRules/Rollup_Summary_NoofOpps.validationRule-meta.xml
<ValidationRule>
    <fullName>Rollup_Summary_NoofOpps</fullName>
    <active>false</active>
    <errorConditionFormula>No_of_Opps__c &gt; 1</errorConditionFormula>
    <errorMessage>You cannot create more than one Opportnity record</errorMessage>
</ValidationRule>